# PDF-Writer

./: .clang-tidy  .gitmodules  CMakeLists.txt  README.md  codecov.yml
apps/: CMakeLists.txt  pdfinfo.cpp  pdfmerge.cpp
contrib/: CMakeLists.txt
demo/: AppendingAndReading.cpp  AppendingAndReading.h  BasicModification.cpp  BasicModification.h  BoxingBaseTest.cpp  BoxingBaseTest.h  BufferedOutputStreamTest.cpp  BufferedOutputStreamTest.h  CMakeLists.txt  CopyingAndMergingEmptyPages.cpp  CopyingAndMergingEmptyPages.h  CustomLogTest.cpp  CustomLogTest.h  DCTDecodeFilterTest.cpp  DCTDecodeFilterTest.h  DFontTest.cpp  DFontTest.h  EmptyFileTest.cpp  EmptyFileTest.h  EmptyPagesPDF.cpp  EmptyPagesPDF.h  EncryptedPDF.cpp  EncryptedPDF.h  FileURL.cpp  FileURL.h  FlateEncryptionTest.cpp  FlateEncryptionTest.h  FlateObjectDecodeTest.cpp  FlateObjectDecodeTest.h  FormXObjectTest.cpp  FormXObjectTest.h  FreeTypeInitializationTest.cpp  FreeTypeInitializationTest.h  HighLevelContentContext.cpp  HighLevelContentContext.h  HighLevelImages.cpp  HighLevelImages.h  ITestUnit.h  ImagesAndFormsForwardReferenceTest.cpp  ImagesAndFormsForwardReferenceTest.h  (+95 more)
include/libcharta/: ANSIFontWriter.h  AbstractContentContext.h  AbstractWrittenFont.h  CIDFontWriter.h  CMYKRGBColor.h  CMakeLists.txt  CatalogInformation.h  ContainerIterator.h  DescendentFontWriter.h  DictionaryContext.h  DocumentContext.h  DocumentContextExtenderAdapter.h  EHummusImageType.h  EPDFVersion.h  EStatusCode.h  FSType.h  FontDescriptorWriter.h  GraphicState.h  GraphicStateStack.h  IANSIFontWriterHelper.h  IContentContextListener.h  IDescendentFontWriter.h  IDocumentContextExtender.h  IFormEndWritingTask.h  IObjectsContextExtender.h  IPageEndWritingTask.h  IResourceWritingTask.h  ITiledPatternEndWritingTask.h  IType1InterpreterImplementation.h  IType2InterpreterImplementation.h  IWrittenFont.h  IndirectObjectsReferenceRegistry.h  Log.h  MapIterator.h  ObjectsBasicTypes.h  ObjectsContext.h  ObjectsContextExtenderAdapter.h  PDFFormXObject.h  PDFImageXObject.h  PDFModifiedPage.h  (+24 more)
src/: ANSIFontWriter.cpp  ANSIFontWriter.h  AbstractContentContext.cpp  AbstractContentContext.h  AbstractWrittenFont.cpp  AbstractWrittenFont.h  Ascii7Encoding.h  BetweenIncluding.h  BoxingBase.h  CFFANSIFontWriter.cpp  CFFEmbeddedFontWriter.cpp  CFFEmbeddedFontWriter.h  CFFFileInput.h  CFFPrimitiveReader.h  CIDFontWriter.cpp  CIDFontWriter.h  CMYKRGBColor.cpp  CMYKRGBColor.h  CMakeLists.txt  CatalogInformation.cpp  CharStringDefinitions.h  CharStringType2Tracer.cpp  DecryptionHelper.cpp  DescendentFontWriter.cpp  DescendentFontWriter.h  DictOperand.h  DictionaryContext.cpp  DictionaryContext.h  DocumentContext.cpp  DocumentContext.h  DocumentContextExtenderAdapter.h  EHummusImageType.h  EStatusCode.h  ETokenSeparator.h  EncryptionHelper.cpp  FSType.h  FontDescriptorWriter.cpp  FontDescriptorWriter.h  FreeTypeType1Wrapper.cpp  FreeTypeWrapper.cpp  (+108 more)
src/encoding/: Ascii7Encoding.cpp  Ascii7Encoding.h  CMakeLists.txt  PDFDocEncoding.cpp  PDFDocEncoding.h  StandardEncoding.cpp  StandardEncoding.h  UnicodeString.cpp  UnicodeString.h  WinAnsiEncoding.cpp  WinAnsiEncoding.h
src/encryption/: CMakeLists.txt  DecryptionHelper.cpp  DecryptionHelper.h  EncryptionHelper.cpp  EncryptionHelper.h  EncryptionOptions.cpp  MD5Generator.cpp  MD5Generator.h  RC4.cpp  RC4.h  XCryptionCommon.cpp  XCryptionCommon.h
src/images/: CMakeLists.txt
src/io/: AdapterIByteReaderWithPositionToIReadPositionProvider.h  ArrayOfInputStreamsStream.cpp  ArrayOfInputStreamsStream.h  CMakeLists.txt  IByteReader.h  IByteReaderWithPosition.h  IByteWriter.h  IByteWriterWithPosition.h  IOBasicTypes.h  IReadPositionProvider.h  InputAESDecodeStream.cpp  InputAESDecodeStream.h  InputAscii85DecodeStream.cpp  InputAscii85DecodeStream.h  InputAsciiHexDecodeStream.cpp  InputAsciiHexDecodeStream.h  InputBufferedStream.cpp  InputBufferedStream.h  InputByteArrayStream.cpp  InputByteArrayStream.h  InputCharStringDecodeStream.cpp  InputCharStringDecodeStream.h  InputDCTDecodeStream.cpp  InputDCTDecodeStream.h  InputFile.cpp  InputFile.h  InputFileStream.cpp  InputFileStream.h  InputFlateDecodeStream.cpp  InputFlateDecodeStream.h  InputLZWDecodeStream.cpp  InputLZWDecodeStream.h  InputLimitedStream.cpp  InputLimitedStream.h  InputPFBDecodeStream.cpp  InputPFBDecodeStream.h  InputPredictorPNGOptimumStream.cpp  InputPredictorPNGOptimumStream.h  InputPredictorTIFFSubStream.cpp  InputPredictorTIFFSubStream.h  (+25 more)
src/objects/: CMakeLists.txt  PDFArray.cpp  PDFArray.h  PDFBoolean.cpp  PDFBoolean.h  PDFCosArray.cpp  PDFCosDict.cpp  PDFCosDict.h  PDFDictionary.cpp  PDFDictionary.h  PDFHexString.cpp  PDFHexString.h  PDFIndirectObjectReference.cpp  PDFIndirectObjectReference.h  PDFInteger.cpp  PDFInteger.h  PDFLiteralString.cpp  PDFLiteralString.h  PDFName.cpp  PDFName.h  PDFNull.cpp  PDFObject.cpp  PDFObject.h  PDFObjectCast.h  PDFPageInput.cpp  PDFReal.cpp  PDFReal.h  PDFStreamInput.cpp  PDFStreamInput.h  PDFSymbol.cpp
src/parsing/: CMakeLists.txt  IPDFParserExtender.h  PDFDocumentCopyingContext.cpp  PDFDocumentCopyingContext.h  PDFDocumentHandler.cpp  PDFDocumentHandler.h  (+12 more)
tests/: AppendPagesTest.cpp  AppendSpecialPagesTest.cpp  AppendingAndReadingTest.cpp  BasicModificationTest.cpp  BoxingBaseTest.cpp  BufferedOutputStreamTest.cpp  CMakeLists.txt  CopyingAndMergingEmptyPagesTest.cpp  CustomLogTest.cpp  DCTDecodeFilterTest.cpp  DFontTest.cpp  EmptyFileTest.cpp  EmptyPagesPDFTest.cpp  EncryptedPDFTest.cpp  FlateEncryptionTest.cpp  FlateObjectDecodeTest.cpp  FormXObjectTest.cpp  FreeTypeInitializationTest.cpp  HighLevelContentContextTest.cpp  HighLevelImagesTest.cpp  ImagesAndFormsForwardReferenceTest.cpp  InputFlateDecodeTest.cpp  InputImagesAsStreamsTest.cpp  JPGImageTest.cpp  LinksTest.cpp  LogTest.cpp  MergePDFPagesTest.cpp  MergeToPDFFormTest.cpp  ModifyingEncryptedFileTest.cpp  ModifyingExistingFileContentTest.cpp  OpenTypeTest.cpp  OutputFileStreamTest.cpp  PDFComment.h  PDFCommentWriter.cpp  PDFCommentWriter.h  PDFCopyingContextTest.cpp  PDFDateTest.cpp  PDFEmbedTest.cpp  PDFObjectParserTest.cpp  PDFParserTest.cpp  (+22 more)
(+199 files in other folders)
